@@ -1,0 +1,9 @@
+mysql> explain select * from foo where match(a) against('hello');
++----+-------------+-------+----------+---------------+------+---------+------+------+-------------+
+| id | select_type | table | type     | possible_keys | key  | key_len | ref  | rows | Extra       |
++----+-------------+-------+----------+---------------+------+---------+------+------+-------------+
+|  1 | SIMPLE      | foo   | fulltext | a             | a    | 0       |      |    1 | Using where | 
++----+-------------+-------+----------+---------------+------+---------+------+------+-------------+
+1 row in set (0.00 sec)
+
+mysql> 
